--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tiptap/starter-kit": "^2.11.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "re-resizable": "^6.11.2",
