--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "@tiptap/extension-link": "^2.11.5",
     "@tiptap/extension-list-item": "^2.11.5",
     "@tiptap/extension-ordered-list": "^2.11.5",
+    "@tiptap/extension-paragraph": "^3.15.1",
+    "@tiptap/extension-placeholder": "^3.15.1",
     "@tiptap/extension-strike": "^2.11.5",
+    "@tiptap/extension-subscript": "^3.15.1",
+    "@tiptap/extension-superscript": "^3.15.1",
     "@tiptap/extension-table": "^2.11.5",
     "@tiptap/extension-table-cell": "^2.11.5",
     "@tiptap/extension-table-header": "^2.11.5",
@@ -58,6 +62,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-select": "^5.10.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
@@ -71,6 +76,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "sass": "^1.97.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
